管理员权限；删除博客；评论博客

--- a/WebContent/static/css/blog.css
+++ b/WebContent/static/css/blog.css
@@ -28,3 +28,15 @@
 #loading-blog {
 	padding: 80px;
 }
+
+#add-blog-comment .col-xs-12 {
+	margin: 5px 0;
+}
+
+.comment-list-template {
+	margin-left: -20px;
+}
+
+#comment-list hr {
+	margin: 7px 0;
+}
