--- a/WebContent/static/css/list.css
+++ b/WebContent/static/css/list.css
@@ -14,6 +14,10 @@
 	font-size: 23px;
 }
 
+#blog-list .blog-list-delete {
+	cursor: pointer;
+}
+
 #search-blog {
     border: 0;
     font-size: 25px;
