--- a/WebContent/static/css/list.css
+++ b/WebContent/static/css/list.css
@@ -18,6 +18,14 @@
 	cursor: pointer;
 }
 
+#blog-list .blog-type-tname {
+	margin: 0;
+}
+
+#blog-list .hidden-xs {
+	height: 7px;	
+}
+
 #search-blog {
     border: 0;
     font-size: 25px;
