--- a/WebContent/static/css/blogs.css
+++ b/WebContent/static/css/blogs.css
@@ -38,6 +38,11 @@
 	height: 20px;
 }
 
+#blog-list .blog-cover {
+	width: 100%;
+	display: none;
+}
+
 #search-blog {
     border: 0;
     font-size: 21px;
@@ -79,3 +84,8 @@
 #type-list ul {
 	width: 100%;
 }
+
+#type-right-list .list-group-item:hover {
+	cursor: pointer;
+}
+
