--- a/WebContent/static/css/blogs.css
+++ b/WebContent/static/css/blogs.css
@@ -115,22 +115,25 @@
 #type-right-list button {
 	height: 55px;
 }
-
 #language-selector {
 	margin: 30px 0;
 }
 
 #language-selector button {
-	background: rgba(255, 255, 255, 0.2);
+	background: rgba(200, 200, 200, 0.2);
     border: none;
     color: #fff;
 }
 
 #language-selector .dropdown-menu {
-	background: rgba(255, 255, 255, 0.2);
+	background: rgba(200, 200, 200, 0.2);
 }
 
 #language-selector .dropdown-menu a {
 	color: #fff;
 	text-align: center;
+}
+
+#language-selector .dropdown-menu a:hover {
+	background: rgba(200, 200, 200, 0.5);
 }
