--- a/WebContent/static/css/index.css
+++ b/WebContent/static/css/index.css
@@ -8,3 +8,26 @@
 	color: #fff; 
 	text-decoration: none;
 }
+
+#language-selector {
+	margin: 30px 0;
+}
+
+#language-selector button {
+	background: rgba(200, 200, 200, 0.2);
+    border: none;
+    color: #fff;
+}
+
+#language-selector .dropdown-menu {
+	background: rgba(200, 200, 200, 0.2);
+}
+
+#language-selector .dropdown-menu a {
+	color: #fff;
+	text-align: center;
+}
+
+#language-selector .dropdown-menu a:hover {
+	background: rgba(200, 200, 200, 0.5);
+}
