管理博文列表页为每一篇文章单独设置生成按钮

--- a/WebContent/static/css/list.css
+++ b/WebContent/static/css/list.css
@@ -14,8 +14,10 @@
 	font-size: 23px;
 }
 
-#blog-list .blog-list-delete {
+#blog-list .blog-list-delete,
+#blog-list .blog-list-regenerate {
 	cursor: pointer;
+	margin-left: 10px;
 }
 
 #blog-list .blog-type-tname {
