--- a/WebContent/static/css/edit.css
+++ b/WebContent/static/css/edit.css
@@ -23,6 +23,12 @@
 #blog-upload-cover-button {
 	margin-bottom: 20px;
 	overflow: auto;
+    padding: 5px;
+}
+
+#blog-upload-cover-button p {
+    font-size: 13px;
+    margin: 0;
 }
 
 #edit-blog-title {
