显示附件列表；删除附件

--- a/WebContent/static/css/edit.css
+++ b/WebContent/static/css/edit.css
@@ -12,7 +12,9 @@
     font-size: 4em;
 }
 
-#blog-cover-img, #blog-cover-progress {
+#blog-cover-img, 
+#blog-cover-progress,
+#attachment-upload-progress {
 	display: none;
 }
 
