修复管理员删除插图和获取插图链接时，弹出窗口被遮挡

--- a/WebContent/static/css/edit.css
+++ b/WebContent/static/css/edit.css
@@ -111,6 +111,7 @@
     border: 1px solid rgba(0,0,0,.2);
     -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
     box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    z-index: 1;
 }
 
 #illustration-list .illustration-list-link p,
