优化：小屏幕下图片的100%显示

--- a/WebContent/static/css/blog.css
+++ b/WebContent/static/css/blog.css
@@ -151,3 +151,9 @@
 #language-selector .dropdown-menu a:hover {
 	background: rgba(200, 200, 200, 0.5);
 }
+
+@media screen and (max-width: 768px) {
+	img {
+		width: 100% !important;
+	}
+}
