修复博文页面自定义背景闪屏

--- a/WebContent/static/css/blog.css
+++ b/WebContent/static/css/blog.css
@@ -1,6 +1,9 @@
 #home .top-header {
 	min-height: 250px;
 	padding-top: 8px;
+	background-repeat:no-repeat;
+	background-position:center;
+	background-size:cover;
 }
 
 #home h1 {
