--- a/WebContent/static/css/blogs.css
+++ b/WebContent/static/css/blogs.css
@@ -2,6 +2,10 @@
 	min-height: 250px;
 	max-height: 250px;
 	padding-top: 8px;
+	background:url(../images/header-bg.jpg);
+	background-repeat:no-repeat;
+	background-position:center;
+	background-size:cover;
 }
 
 #home h1 {
