--- a/WebContent/static/css/blogs.css
+++ b/WebContent/static/css/blogs.css
@@ -141,3 +141,27 @@
 #language-selector .dropdown-menu a:hover {
 	background: rgba(200, 200, 200, 0.5);
 }
+
+.copyright {
+    padding: 5em 0;
+    background: #222;
+    position: relative;
+    font-weight: 300;
+}
+
+.copyright p {
+    color: #FFF;
+    font-size: .875em;
+    margin: .2em 0;
+}
+
+.copyright label {
+    color: #999;
+    font-size: .875em;
+    padding: 0;
+    margin: 0;
+}
+
+.copyright p a {
+    color: #FFF;
+}
