--- a/WebContent/static/css/style.css
+++ b/WebContent/static/css/style.css
@@ -1,10 +1,86 @@
-/*--
-Author: W3layouts	
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
---*/
+.top-header {
+    padding: 1em 0;
+    min-height: 750px;
+}
 
-html,body{font-family:'Lato',sans-serif,trebuchet ms,arial,sans-serif;font-size:100%;background:#FFF}body a{transition:.5s all;-webkit-transition:.5s all;-moz-transition:.5s all;-o-transition:.5s all;-ms-transition:.5s all}@font-face{font-family:'nexa_boldregular';src:url('../fonts/Nexa_Free_Bold-webfont.ttf') format('truetype');font-weight:normal;font-style:normal}.text-white{color:white}.artical-pic img{cursor:pointer}.top-header{}.logo{float:left;margin-top:.6em}.logo a{color:#303030;font-weight:200;text-transform:uppercase;font-size:2.5em}.logo a:hover{text-decoration:none}.logo320{display:none}.top-header{padding:1em 0;min-height:750px}.top-nav ul li a{color:#FFF;padding:.2em 1.5em;font-size:.9em;font-weight:400;text-align:center;text-transform:uppercase;position:relative}.top-nav ul li.active a,.top-nav ul li a:hover{color:#FFF}.top-nav ul li.active span{width:60px;height:3px;background:#FFF;display:block;text-align:center;margin:0 auto}.logo a{display:block}.top-nav:before,.top-nav:after{content:" ";display:table}.top-nav:after{clear:both}.top-header-info{margin-top:18em}.top-header-info p{color:#FFF;font-family:'nexa_boldregular';font-size:3em;margin:0;line-height:1.3em}a.contactme{color:#FFF;font-family:'nexa_boldregular';background:#00b6ae;text-decoration:none;font-size:1.1em;padding:.6em 2em;margin:1em 0;display:inline-block;border-radius:.2em;-webkit-border-radius:.2em;-moz-border-radius:.2em;-o-border-radius:.2em;-ms-border-radius:.2em}a.contactme:hover{background:#00948b}.aboutus{padding:3em 0}.aboutus h2{font-size:2em;color:#333;font-weight:900;margin:0;padding:.5em 0}.aboutus span{height:5px;width:7%;background:#00948b;display:block}.aboutus p{font-size:1em;color:#666;margin:0 0 1em 0;line-height:1.5em}.aboutus-left,.aboutus-right{margin:1.5em 0}a.aboutus-right-btn{color:#FFF;font-family:'nexa_boldregular';background:#00b6ae;text-decoration:none;font-size:1.1em;padding:.6em 2em;margin:1em 0;display:inline-block;border-radius:.2em;-webkit-border-radius:.2em;-moz-border-radius:.2em;-o-border-radius:.2em;-ms-border-radius:.2em}a.aboutus-right-btn:hover{background:#00948b}.quote{background:#2e3041;padding:6em 0}.quote p{color:#FFF;font-size:2em;font-family:'nexa_boldregular';width:90%;margin:0 auto}.works{padding:2em 0 3em}.works h2{font-size:2em;color:#333;font-weight:900;margin:0;padding:.5em 0}.works span{height:5px;width:7%;background:#00948b;display:block}.project-grid-info-left{padding:1.5em 0}.project-grid-info-left h3{color:#333;font-family:'nexa_boldregular';font-size:1.2em;margin:.5em 0 0 0}.project-grid-info-left label,.project-grid-info-left label a{color:#666;font-size:1em;font-weight:normal;display:block;margin:.5em 0}.project-grid-info-left label a:hover{text-decoration:none;color:#00b6ae}a.sitedemo{color:#FFF;font-family:'nexa_boldregular';background:#00b6ae;text-decoration:none;font-size:1.1em;padding:.6em 2em;margin:.5em 0;display:inline-block;border-radius:.2em;-webkit-border-radius:.2em;-moz-border-radius:.2em;-o-border-radius:.2em;-ms-border-radius:.2em}a.sitedemo:hover{background:#00948b}.project-grid-info-left h3 a{color:#333;font-size:1.2em}.project-grid-info-left h3 a:hover{text-decoration:none;color:#00b6ae}.project-grid-info-left p{font-size:1em;color:#666;line-height:1.5em;margin:.5em 0 0}ul.project-share{margin:0;padding:0}.project-share li a{color:#cacaca;font-size:1.1em;text-transform:uppercase;font-weight:600}.project-share li a label{width:25px;height:25px;display:inline-block}.project-share li a.p-like{background:url(../images/heart-icon.png) no-repeat 0 0}.project-share li a.p-share{background:url(../images/share-icon.png) no-repeat 0 0}.project-share li a:hover{color:#00b6ae;text-decoration:none}.testmonials{background:#2e3041;padding:3em 0}.testmonials h2{font-size:2em;color:#FFF;font-weight:900;margin:0;padding:.5em 0}.testmonials span{height:5px;width:7%;background:#FFF;display:block}.test-people-pic{float:left}.test-people-info{float:right;width:300px;padding-top:.5em;padding-left:.5em}.test-people{float:right}.people-testmonials p{color:#FFF;font-size:2em;font-weight:600}.test-people-info a{color:#FFF;font-size:1.5em}.test-people-info small{color:#EEE;display:block}.contact{padding:2em 0}.contact h2{font-size:2em;color:#333;font-weight:900;margin:0;padding:.5em 0}.contact span{height:5px;width:7%;background:#00948b;display:block}.contact-left p{color:#696969;font-size:1em;font-family:'nexa_boldregular';margin:0 0 1em 0}.contact-left input[type="text"],.contact-left textarea{width:100%;padding:.85em;margin-bottom:1em;background:#f4f8fe;border:1px solid #bfcadc;transition:border-color .3s;-webkit-transition:border-color .3s;-moz-transition:border-color .3s;-o-transition:border-color .3s;-ms-transition:border-color .3s;outline:0;font-family:'nexa_boldregular';color:#323235;-webkit-appearance:none}
-.contact-left input[type="text"]:hover,.contact-left textarea:hover{border-color:#00948b}.contact-left textarea{height:200px}.contact-left,.contact-right{padding:2em 15px}.contact-left form{margin:1.5em 0 1em}.contact-left input[type="submit"]{color:#FFF;font-family:'nexa_boldregular';background:#00b6ae;text-decoration:none;font-size:1.1em;padding:.6em 2em;margin:.5em 0 2em;display:inline-block;border-radius:.2em;-webkit-border-radius:.2em;-moz-border-radius:.2em;-o-border-radius:.2em;-ms-border-radius:.2em;outline:0;border:1px solid #00b6ae;cursor:pointer;-webkit-appearance:none;float:right;transition:.5s all;-webkit-transition:.5s all;-moz-transition:.5s all;-o-transition:.5s all;-ms-transition:.5s all}.contact-left input[type="submit"]:hover{background:#00948b}.contact-right p{color:#696969;font-size:1em;font-family:'nexa_boldregular';margin:0 0 1em 0}.address label{color:#333;font-size:1em;font-family:'nexa_boldregular';display:block}.address{margin:1em 0}.social-share h4{font-size:1.1em;color:#333;font-family:'nexa_boldregular';margin:.8em 0;display:block}.social-share ul li{padding:0 3px}.social-share ul li a span{width:35px;height:35px;display:inline-block;background:url(../images/social-icons.png) no-repeat 0 0}.social-share ul li a.facebook span{background-position:0 0}.social-share ul li a.twitter span{background-position:-43px 0}.social-share ul li a.googlepluse span{background-position:-86px 0}.social-share ul li a.dribbble span{background-position:-128px 0}.contact-map{position:relative}.contact-map iframe{width:100%;min-height:350px;border:0;outline:0;position:relative}.contact-map label{position:absolute;color:#070707;padding:.8em 2em;top:40%;left:45%;background:#FFF;cursor:pointer;box-shadow:0 0 10px #555;-webkit-box-shadow:0 0 10px #555;-moz-box-shadow:0 0 10px #555;-o-box-shadow:0 0 10px #555;-ms-box-shadow:0 0 10px #555}.copy-right{position:relative;font-weight:300}.copy-right{background:url(../images/footer-bg.png);padding:5em 0}.copy-right p{color:#FFF;font-size:.875em;margin:.2em 0}.copy-right p a{color:#FFF}.copy-right p a:hover{text-decoration:none;color:#00b6ae}.copy-right label{color:#999;font-size:.875em;padding:0;margin:0}#toTop{display:none;text-decoration:none;position:fixed;bottom:14px;right:3%;overflow:hidden;width:40px;height:40px;border:0;text-indent:100%;background:url("../images/to-top1.png") no-repeat 0 0}#toTopHover{width:40px;height:40px;display:block;overflow:hidden;float:right;opacity:0;-moz-opacity:0;filter:alpha(opacity=0)}@media(max-width:1280px){.top-header-info{margin-top:15em}.top-header{min-height:700px}}@media(max-width:1024px){.top-header-info{margin-top:15em}.top-header{min-height:700px}.project-screen{width:100%}.people-testmonials p{font-size:1.2em;font-weight:600}.aboutus h2,.works h2,.testmonials h2,.contact h2{font-size:1.8em}.quote p{font-size:1.8em}.quote{padding:4em 0}.copy-right{padding:2em 0}.contact-map iframe{min-height:261px}}@media(max-width:768px){.top-header-info{margin-top:15em}.top-header{min-height:700px}.project-screen{width:100%}.people-testmonials p{font-size:1.2em;font-weight:600}.aboutus h2,.works h2,.testmonials h2,.contact h2{font-size:1.8em}.quote p{font-size:1.8em}.quote{padding:4em 0}.copy-right{padding:2em 0}.contact-map iframe{min-height:261px}.top-nav ul li.active a,.top-nav ul li a:hover{color:#2c3e50}.logo{position:relative;position:relative;z-index:999}.testmonials{padding:1em 0}.test-people-pic{float:none;text-align:left}}@media(max-width:640px){.top-header-info{margin-top:15em}.top-header{min-height:700px}.project-screen{width:100%}.people-testmonials p{font-size:1.2em;font-weight:600}.aboutus h2,.works h2,.testmonials h2,.contact h2{font-size:1.8em}.quote p{font-size:1.5em}.quote{padding:3em 0}.copy-right{padding:2em 0}.contact-map iframe{min-height:261px}.top-nav ul li.active a,.top-nav ul li a:hover{color:#2c3e50}.logo{position:relative;z-index:999}.testmonials{padding:1em 0}.test-people-pic{float:none;text-align:left}}@media(max-width:480px){.top-header-info{margin-top:15em}.top-header{min-height:400px}.project-screen{width:100%}.people-testmonials p{font-size:1.2em;font-weight:600}.aboutus h2,.works h2,.testmonials h2,.contact h2{font-size:1.5em}.quote p{font-size:1.4em}.quote{padding:2em 0}.copy-right{padding:2em 0}.contact-map iframe{min-height:261px}.top-nav ul li.active a,.top-nav ul li a:hover{color:#2c3e50}.logo{position:relative;z-index:999;margin-top:.5em}.testmonials{padding:1em 0}.test-people-pic{float:none;text-align:left}.top-header-info p{font-size:2.2em}.aboutus{padding:1em 0}}@media(max-width:320px){.top-header-info{margin-top:9em}.top-header{min-height:400px;padding:0}.project-screen{width:100%}.people-testmonials p{font-size:1.2em;font-weight:600}.aboutus h2,.works h2,.testmonials h2,.contact h2{font-size:1.2em}.quote p{font-size:1.1em}
-.quote{padding:1.5em 0}.copy-right{padding:2em 0}.contact-map iframe{min-height:261px}.top-nav ul li.active a,.top-nav ul li a:hover{color:#2c3e50}.logo{position:relative;z-index:999;margin-top:.5em}.testmonials{padding:1em 0}.test-people-pic{float:none;text-align:center}.top-header-info p{font-size:1.6em}a.contactme{font-size:1.1em;padding:.5em 1em;margin:.5em 0 1em}.aboutus{padding:.5em 0}a.aboutus-right-btn{font-size:1em;padding:.6em 1em}a.sitedemo{font-size:1em;padding:.6em 1em}.project-grid-info-left h3{font-size:1em}.project-grid-info-left{padding:1.5em 0 0}.test-people{float:none;text-align:center}.project-share li a{font-size:.9em}.contact-left input[type="submit"]{font-size:1em;padding:.6em 1em;margin:.5em 0 2em}.contact-left,.contact-right{padding:1em 0}}
+.top-header h1,
+.top-header h2,
+.top-header h4,
+.top-header .home a {
+	text-shadow: 0 0 5px #afafaf, 0 0 2px #b1b1b1;
+}
+
+.top-header-info {
+    margin-top: 18em;
+}
+
+.top-header-info p {
+    color: #fff;
+    font-size: 3em;
+    margin: 0;
+    line-height: 1.3em;
+    text-shadow: 0 0 0.5em #afafaf, 0 0 0.5em #b1b1b1;
+}
+
+a.contactme {
+    color: #FFF;
+    background: #00b6ae;
+    text-decoration: none;
+    font-size: 1.1em;
+    padding: .6em 2em;
+    margin: 1em 0;
+    display: inline-block;
+    border-radius: .2em;
+    -webkit-border-radius: .2em;
+    -moz-border-radius: .2em;
+    -o-border-radius: .2em;
+    -ms-border-radius: .2em;
+}
+
+.language {
+	margin: 30px 0;
+}
+
+.language button {
+	background: rgba(200, 200, 200, 0.2);
+    border: none;
+    color: #fff;
+}
+
+.language .dropdown-menu {
+	background: rgba(200, 200, 200, 0.2);
+}
+
+.language .dropdown-menu a {
+	color: #fff;
+	text-align: center;
+}
+
+.language .dropdown-menu a:hover {
+	background: rgba(200, 200, 200, 0.5);
+}
+
+.copyright {
+	padding: 5em 0;
+	background: #222;
+	position: relative;
+	font-weight: 300;
+	font-size: 18px;
+}
+
+.copyright p {
+    color: #FFF;
+    font-size: .875em;
+    margin: .2em 0;
+}
+
+.copyright p a {
+    color: #FFF;
+}
+
+.copyright label {
+    color: #999;
+    font-size: .875em;
+    padding: 0;
+    margin: 0;
+}
