--- a/WebContent/static/css/style.css
+++ b/WebContent/static/css/style.css
@@ -23,7 +23,7 @@
 }
 
 a.contactme {
-    color: #FFF;
+    color: #fff;
     background: #00b6ae;
     text-decoration: none;
     font-size: 1.1em;
@@ -69,18 +69,18 @@ a.contactme {
 }
 
 .copyright p {
-    color: #FFF;
-    font-size: .875em;
+    color: #fff;
     margin: .2em 0;
 }
 
 .copyright p a {
-    color: #FFF;
+    color: #fff;
 }
 
-.copyright label {
+.copyright label,
+.copyright label a {
     color: #999;
-    font-size: .875em;
+    font-size: 15px;
     padding: 0;
     margin: 0;
 }
